2005-08-08  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-post-matching-hash): Forgot to make the
	OFFLINE argument optional.
	(delicious-search-who-else): Changed to use the url?url form,
	because Joshua says we can't rely on the md5 hash.
	(delicious-read-time-string): Use the current time if no time
	string is entered. Didn't I do this before?
	(delicious-complete-tags): Forgot to respect the offline argument
	when building the tags list.
	(delicious-build-tags-list): Forgot here too.
	(delicious-save-buffer): Bury the buffer here, so we don't have to
	do it twenty other places.
	(delicious-post-cache): Use ASSOC instead of ELT; safer when then
	list structure changes a bit.

	* delicioapi.el (delicious-api-post): Oops, I was escaping all the
	fields but the URL. Escape the URL, so addresses with ampersands
	and things in them will work.

	* delicious.el (delicious-edit-post-locally): New internal
	function to update specific fields in a local copy of a post.
	(delicious-post): New NOLOCAL argument to stop local addition of
	posts. Needed to prevent duplication when we are editing posts in
	Delicious Search mode.
	(delicious-complete-tags): Ugly hack to remove trailing space on
	tags, until I get time to rewrite this loop.
	(delicious-search-delete-tags): New function to delete tags from a
	post. Bound to `d' in Delicious Search mode when you are over the
	tags line.
	(delicious-search-who-else): New interactive command in Delicious
	Search mode to browse to a page showing who else has bookmarked
	this URL. Bound to `w' in Delicious Search mode when you are over
	any field in a record.
	(delicious-post): Compute the hash so we have a copy of it to
	store locally.
	(delicious-post-local): Oops, fix the argument passed to
	delicious-rebuild-tags-maybe.
	(delicious-post-offline): Compute the hash.

2005-08-07  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-guess-url-methods): Customize this to